add correct submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 [submodule "scrollburglars"]
 	path = scrollburglars
 	url = https://github.com/Xelaflash/scrollburglars.git
+[submodule "sole-and-ankle-revisited"]
+	path = sole-and-ankle-revisited
+	url = git@github.com:Xelaflash/sole-and-ankle-revisited.git
